--- a/src/modules/tab.module.scss
+++ b/src/modules/tab.module.scss
@@ -8,7 +8,7 @@
     height: 36px;
     width: 200px;
     background: white;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid #ededed;
     &:focus,
     &:hover {
         outline: none;
